# Lab2.2

./: ArraySequence.hpp  CMakeLists.txt  ComplexNumber.hpp  DynamicArray.hpp  FloatComplexPolInterface.hpp  FloatPolInterface.hpp  FloatQuadMatrixPolInterface.hpp  IndexOutOfRange.hpp  IntComplexPolInterface.hpp  IntPolInterface.hpp  IntQuadMatrixPolInterface.hpp  InterfacePol.hpp  LinkedList.hpp  LinkedListSequence.hpp  MatrixError.hpp  Menu.hpp  MenuError.hpp  PolyError.hpp  Polynomial.hpp  QuadMatrix.hpp  README.md  Sequence.hpp  Test.hpp  main.cpp
