cmake_minimum_required(VERSION 3.22)
project(Lab2prj)

set(CMAKE_CXX_STANDARD 20)

add_executable(Lab2prj main.cpp IndexOutOfRange.hpp LinkedList.hpp DynamicArray.hpp Sequence.hpp ArraySequence.hpp LinkedListSequence.hpp ComplexNumbers.hpp QuadMatrix.hpp MatrixError.hpp Polynomial.hpp PolyError.hpp InterfacePol.hpp IntPolInterface.hpp FloatPolInterface.hpp Menu.hpp MenuError.hpp IntComlpexPolInterface.hpp FloatComplexPolInterface.hpp IntQuadMatrixPolInterface.hpp FloatQuadMatrixPolInterface.hpp Test.hpp)
